err/all-repos.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/all_repos'...
Listing './lib/python3.5/site-packages/all_repos/autofix'...
Compiling './lib/python3.5/site-packages/all_repos/autofix_lib.py'...
***   File "./lib/python3.5/site-packages/all_repos/autofix_lib.py", line 99
    print(f'$ {cmdstr}', flush=True)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/all_repos/clone.py'...
***   File "./lib/python3.5/site-packages/all_repos/clone.py", line 44
    print(f'Removing {path}')
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/all_repos/color.py'...
***   File "./lib/python3.5/site-packages/all_repos/color.py", line 11
    return f'{color}{text}{NORMAL}'
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/all_repos/complete.py'...
***   File "./lib/python3.5/site-packages/all_repos/complete.py", line 81
    print(f'__all_repos__repos_json={config.repos_filtered_path}')
                                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/all_repos/config.py'...
***   File "./lib/python3.5/site-packages/all_repos/config.py", line 37
    f'{filename} has too-permissive permissions, Expected 0o600, '
                                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/all_repos/push'...
Compiling './lib/python3.5/site-packages/all_repos/push/github_pull_request.py'...
***   File "./lib/python3.5/site-packages/all_repos/push/github_pull_request.py", line 23
    f'https://api.github.com/repos/{repo_slug}/forks',
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/all_repos/sed.py'...
***   File "./lib/python3.5/site-packages/all_repos/sed.py", line 71
    msg = f'{_quote_cmd(ls_files_cmd)} | xargs -0 {_quote_cmd(sed_cmd)}'
                                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/all_repos/source'...
Compiling './lib/python3.5/site-packages/all_repos/source/gitolite.py'...
***   File "./lib/python3.5/site-packages/all_repos/source/gitolite.py", line 17
    f'{self.username}@{self.hostname}:{{repo_name}}'
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/all_repos-1.2.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/identify'...
Listing './lib/python3.5/site-packages/identify-1.0.7.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
